--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <script type="text/javascript" charset="UTF-8" src="https://js.api.here.com/v3/3.1/mapsjs-data.js"></script>
     <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.1/mapsjs-ui.css" />
   <meta charset="UTF-8" />
-  <link rel="icon" href="/public/Logo.png" />
+  <link rel="icon" href="/public/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Analyse graphique vélo</title>
+  <title>Le Petit Bateau</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
